# ecs

./: .gitignore  CMakeLists.txt  README.md  main.cpp
doc/html/: _component_buffer_8h.html  _component_buffer_8h_source.html  _component_wrapper_8h.html  _component_wrapper_8h_source.html  _interface_8h.html  _interface_8h_source.html  _manager_8h.html  _manager_8h_source.html  _thread_pool_8h.html  _thread_pool_8h_source.html  annotated.html  classecs_1_1_component_buffer.html  classecs_1_1_component_buffer_3_01meta_1_1_type_list_3_01_typepack_8_8_8_01_4_01_4-members.html  classecs_1_1_component_buffer_3_01meta_1_1_type_list_3_01_typepack_8_8_8_01_4_01_4.html  classecs_1_1_component_wrapper-members.html  classecs_1_1_component_wrapper.html  classecs_1_1_interface-members.html  classecs_1_1_interface.html  classecs_1_1_manager-members.html  classecs_1_1_manager.html  classecs_1_1_thread_pool-members.html  classecs_1_1_thread_pool.html  classecs_1_1impl_1_1_safe_queue-members.html  classecs_1_1impl_1_1_safe_queue.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen.css  files.html  functions.html  functions_func.html  functions_rela.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  index.html  menudata.js  namespaceecs.html  (+5 more)
include/: CMakeLists.txt  Component.h  ComponentBuffer.h  ComponentWrapper.h  Entity.h  Interface.h  Manager.h  Meta.h  Root.h  ThreadPool.h  Util.h
src/: Component.cpp  ComponentBuffer.inl  ComponentWrapper.inl  Entity.cpp  Interface.cpp  Manager.cpp  Manager.inl  ThreadPool.inl  Util.cpp
(+66 files in other folders)
